--- a/pdf_builder_app/docker-compose.yml
+++ b/pdf_builder_app/docker-compose.yml
@@ -5,6 +5,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    ports:
+      - '1323:1323'
+    volumes:
+      - .:/app
   gotenberg:
     image: gotenberg/gotenberg:7
     ports:
