Add: golang-migration

--- a/pdf_builder_app/Dockerfile
+++ b/pdf_builder_app/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 RUN apk update
 
+RUN go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest
+
 COPY . /app
 
 RUN go mod tidy
