--- a/pdf_builder_app/docker-compose.yml
+++ b/pdf_builder_app/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - '1323:1323'
     volumes:
       - .:/app
+    env_file:
+      - .env
   gotenberg:
     image: gotenberg/gotenberg:7
     ports:
