--- a/pdf_builder_app/Dockerfile
+++ b/pdf_builder_app/Dockerfile
@@ -4,7 +4,9 @@ WORKDIR /app
 
 RUN apk update
 
-RUN go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest
+RUN go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest && \
+    go install github.com/volatiletech/sqlboiler/v4@latest && \
+    go install github.com/volatiletech/sqlboiler/v4/drivers/sqlboiler-psql@latest
 
 COPY . /app
 
