--- a/pdf_builder_app/docker-compose.yml
+++ b/pdf_builder_app/docker-compose.yml
@@ -27,6 +27,18 @@ services:
       - ./database/seeds:/seeds
     env_file:
       - .env
+  s3:
+    image: minio/minio:latest
+    command: ["minio", "server", "/data", "--console-address", ":9001"]
+    environment:
+      MINIO_ROOT_USER: user
+      MINIO_ROOT_PASSWORD: password
+    ports:
+      - "9001:9001"
+      - "9000:9000"
+    volumes:
+      - s3-data:/data
 
 volumes:
   postgres-volume:
+  s3-data:
