--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -7,11 +7,15 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["contentScripts.js"]
+      "js": ["contentScripts.js"],
+      "css": ["contentScripts.css"]
     }
   ],
   "action":{
     "default_title": "HTML2PDF",
     "default_popup": "popup.html"
-  }
+  },
+  "permissions": [
+    "storage"
+  ]
 }
